* fix: align Source on projects page with text

--- a/css/projects.css
+++ b/css/projects.css
@@ -46,8 +46,7 @@ div > div > .carousel-caption > div > p{
     top: 305px;
     font-size: 20px;
     left:200px;
-    margin-right: 40px;
-    margin-left:70px;
+    margin-left:15px;
 }
 
 #projectsContainer{
